@@ -74,7 +74,8 @@ http_request_stock_callback(void *ctx, struct stock_item *item)
 
         http_client_request(hr->pool,
                             tcp_stock_item_get(item),
-                            ISTREAM_SOCKET,
+                            tcp_stock_item_get_domain(item) == AF_LOCAL
+                            ? ISTREAM_SOCKET : ISTREAM_TCP,
                             &http_socket_lease, hr,
                             hr->method, hr->uri, hr->headers, hr->body,
                             hr->handler.handler, hr->handler.ctx,
