@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.6.24) unstable; urgency=low
 
   * header-forward: log session id
+  * istream: separate TCP splicing checks
   * allow 8192 connections by default
   * allow 65536 file handles by default
 
